--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.4.1
-gunicorn==20.1.0
+crispy-bootstrap5==0.6
+dj-database-url==0.5.0
 Django==4.0
-django-heroku
+django-crispy-forms==1.13.0
+django-heroku==0.3.1
+gunicorn==20.1.0
+psycopg2==2.9.3
 sqlparse==0.4.2
+whitenoise==5.3.0
